<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".servicios">

    <Button
        android:id="@+id/btninicioas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/boton_activo"
        android:text="@string/btninicio"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnservas"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="-5dp"
        android:layout_toEndOf="@+id/btninicioas"
        android:background="@drawable/boton_activo"
        android:text="@string/btnserv"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btncontactoas"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="-9dp"
        android:layout_toStartOf="@+id/btnaboutas"
        android:background="@drawable/boton_activo"
        android:text="@string/btncontacto"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnaboutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/boton_activo"
        android:text="@string/btnabout"
        android:textColor="#ffffff" />

    <ListView
        android:id="@+id/lvserv"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp" />


</RelativeLayout>