<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btninicioma"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/boton_activo"
        android:text="@string/btninicio"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/btnservma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="191dp"
        android:layout_marginRight="191dp"
        android:background="@drawable/boton_activo"
        android:text="@string/btnserv"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/btncontactoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="107dp"
        android:background="@drawable/boton_activo"
        android:text="@string/btncontacto"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnaboutma"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/boton_activo"
        android:text="@string/btnabout"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="43dp"
        app:srcCompat="@drawable/index" />


</RelativeLayout>