<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/logo2"
        android:label="Softlucion"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <Button
        android:id="@+id/btnservicioaa"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="-1dp"
        android:layout_toEndOf="@+id/btninicioaa"
        android:background="@drawable/boton_activo"
        android:text="@string/btnserv"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btninicioaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/boton_activo"
        android:text="@string/btninicio"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btncontactoaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_toStartOf="@+id/btnaboutaa"
        android:background="@drawable/boton_activo"
        android:text="@string/btncontacto"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnaboutaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/boton_activo"
        android:text="@string/btnabout"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="155dp"
        android:layout_marginStart="21dp"
        android:text="1593698 Marco Antonio Muñoz Gutiérrez"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="289dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="217dp"
        android:text="Laboratorio de dispositivos móviles"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="Agosto - Diciembre 2018" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="-155dp"
        android:text="1593732 Sephany Cisneros Hernández"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView5"
        android:text="1719384 Víctor Manuel Martinez Tavernier"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="176dp"
        app:srcCompat="@drawable/fime" />

</RelativeLayout>